--- a/angular.json
+++ b/angular.json
@@ -55,7 +55,8 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.scss"
+              "src/styles.scss",
+              "src/icons/icon-font.css"
             ],
             "scripts": []
           },
@@ -115,7 +116,8 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.scss"
+              "src/styles.scss",
+              "src/icons/icon-font.css"
             ],
             "scripts": []
           }
