--- a/angular.json
+++ b/angular.json
@@ -56,6 +56,7 @@
             ],
             "styles": [
               "src/styles.scss",
+              "src/variables.scss",
               "src/icons/icon-font.css"
             ],
             "scripts": []
@@ -71,7 +72,7 @@
                 {
                   "type": "anyComponentStyle",
                   "maximumWarning": "2kb",
-                  "maximumError": "4kb"
+                  "maximumError": "6kb"
                 }
               ],
               "outputHashing": "all"
@@ -117,6 +118,7 @@
             ],
             "styles": [
               "src/styles.scss",
+              "src/variables.scss",
               "src/icons/icon-font.css"
             ],
             "scripts": []
